# erp-bridges-backend

./: .gitignore  README.md  main.py  pyproject.toml
src/auth/api/: serializers.py  urls.py  views.py
src/buy_order/: models.py
src/buy_order/migrations/: 0001_initial.py  0002_alter_buyorder_customer_alter_buyorder_payment_type_and_more.py
src/buy_order/repositories/: buy_order_repository.py  ecs_buy_order_repository.py  payment_type_repository.py  status_repository.py
src/company/: models.py
src/company/migrations/: 0001_initial.py
src/company/repositories/: company_repository.py
src/core/: settings.py  settings_test.py  urls.py
src/core/ingestion/: base_extractor.py  base_loader.py  base_pipeline.py  base_transformer.py  pipeline_mapping.py
src/core/typings/: file_types.py
src/customer/: models.py
src/customer/migrations/: 0001_initial.py
src/customer/repositories/: customer_group_repository.py  customer_repository.py
src/ecs/: models.py
src/ecs/ingestion/ecs_order_csv/: extractor.py  loader.py  schemas.py  transformer.py
src/ecs/tests/: conftest.py  test_ecs_order_csv_ingestion.py
src/mgt/: models.py  schemas.py  signals.py
src/mgt/api/: urls.py
src/mgt/api/v1/: filters.py  serializers.py  urls.py  views.py
src/mgt/ingestion/buy_order_csv/: extractor.py  loader.py  pipeline.py  schemas.py  transfomer.py  transformer.py
src/mgt/ingestion/customer_csv/: extractor.py  loader.py  pipeline.py  schemas.py
src/mgt/migrations/: 0001_initial.py
src/mgt/repositories/: buy_order_detail_respository.py  buy_order_repository.py  customer_group_repository.py  customer_repository.py  customers_repository.py  payment_type_repository.py  status_repository.py
src/mgt/schemas/: buy_orders_report_schema.py  buy_orders_schema.py  customers_report_schema.py
src/mgt/tests/: conftest.py  test_buy_order_csv_ingestion.py  test_customer_csv_ingestion.py
src/mgt/tests/fixtures/: buy_orders.csv  customers.csv
src/reports/: ingestion.py  services.py  tasks.py
src/reports/adapters/: base_adapter.py
src/reports/adapters/mgt/: buy_orders_csv_adapter.py  buy_orders_xml_adapter.py  (+1 more)
src/reports/api/: urls.py
src/reports/ingestion/: mapping.py
src/reports/strategies/: base_strategy.py
src/reports/utils/: dataframe_utils.py  monetary.py
src/shipment/: models.py
src/utils/: data_cleaners.py  dataframe_utils.py  datetime_utils.py  load_shipping_methods.py
(+31 files in other folders)
