[project]
name = "erp-bridges-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "pydantic>=2.11.7",
    "python-decouple>=3.8",
]

[tool.ruff]
extend-exclude = ['migrations', 'settings.py', 'manage.py']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR6301']

[tool.ruff.format]
preview = true
quote-style = 'single'
