[project]
name = "erp-bridges-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.4",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "flower>=2.0.1",
    "pandas>=2.3.1",
    "pydantic[email]>=2.11.7",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.3",
    "taskipy>=1.14.1",
]

[tool.ruff]
extend-exclude = ['migrations', 'settings.py', 'manage.py']
line-length = 99

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR6301']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = './src'
addopts = '-p no:warnings'
DJANGO_SETTINGS_MODULE = 'core.settings_test'

[tool.taskipy.tasks]
lint = 'ruff check'
format = 'ruff format'
post_format = 'ruff check --fix'
run = 'uv run src/manage.py runserver'
celery = 'celery -A core worker --loglevel=info --pool=solo'
